[package]
name = "clamide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
cstr = "0.2.11"
getopts = "0.2.21"
log = "0.4.17"
nix = "0.26.2"
num-traits = "0.2.15"
pretty_env_logger = "0.4.0"
proc-maps = "0.3.0"
serde_json = "1.0.96"
syscalls = "0.6.7"
sysinfo = "0.28.2"
thiserror = "1.0.39"
